src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NOK_Address_if_different__c</fullName>
        <label>NOK Address (if different)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOK_Name__c</fullName>
        <formula>eCASS02t1__Next_of_Kin__r.eCASS02t1__Full_name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NOK Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOK_Relationship__c</fullName>
        <inlineHelpText>The relationship between the next of kin to the client</inlineHelpText>
        <label>NOK Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Wife</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Husband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daughter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Son</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPS_Number__c</fullName>
        <label>PPS Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>eCASS02t1__Age__c</fullName>
        <formula>IF(ISBLANK( Birthdate ), 99, FLOOR((TODAY()-Birthdate)/365.2425))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If not known, Code 99</inlineHelpText>
        <label>AGE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__AreaRes__c</fullName>
        <formula>eCASS02t1__Area_of_Residence_and_Reg_Code__r.eCASS02t1__Area_Code__c</formula>
        <label>AreaRes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Area__c</fullName>
        <formula>LEFT(TEXT(eCASS02t1__HSE_area__c), 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Area_of_Residence_and_Reg_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area of Residence and Reg Code</label>
        <referenceTo>eCASS02t1__Area_of_Residence__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__CCA__c</fullName>
        <formula>eCASS02t1__Area_of_Residence_and_Reg_Code__r.eCASS02t1__CCA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CCA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Case_Worker_Phone__c</fullName>
        <formula>eCASS02t1__Case_Worker__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Worker Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Case_Worker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Worker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Case Worker)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__CentreNO__c</fullName>
        <formula>&quot;13687&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CentreNo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Client_ID__c</fullName>
        <label>Client ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Consent_to_share_with_other_agencies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consent to share with other agencies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Contact_Type__c</fullName>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Key Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counsellor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social worker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Counsellor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Counsellor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Date_of_Contact__c</fullName>
        <label>Date of Contact</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__EDLEVEL__c</fullName>
        <formula>Case(eCASS02t1__X12b_Education_highest_level__c,
&quot;0. Primary Level incomplete&quot;,&quot;0&quot;,
&quot;1. Primary level&quot;,&quot;1&quot;,
&quot;2. Junior cert&quot;,&quot;2&quot;,
&quot;3. Leaving Cert&quot;,&quot;3&quot;,
&quot;4. Third Level&quot;,&quot;4&quot;,
&quot;5. Never went to school&quot;,&quot;5&quot;,
&quot;6. Special needs education&quot;,&quot;6&quot;,
&quot;8. Still in education&quot;,&quot;8&quot;,
&quot;9&quot;)</formula>
        <label>EDLEVEL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__EDUCAGE__c</fullName>
        <formula>eCASS02t1__X12a_Age_left_primary_school__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EDUCAGE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__EDUCATION__c</fullName>
        <formula>Case(eCASS02t1__X12b_Education_highest_level__c,
&quot;0. Primary Level incomplete&quot;,&quot;0&quot;,
&quot;1. Primary level&quot;,&quot;1&quot;,
&quot;2. Junior cert&quot;,&quot;2&quot;,
&quot;3. Leaving Cert&quot;,&quot;3&quot;, 
&quot;4. Third Level&quot;,&quot;4&quot;, 
&quot;5. Never went to school&quot;,&quot;5&quot;, 
&quot;6. Special needs education&quot;,&quot;6&quot;, 
&quot;8. Still in education&quot;,&quot;8&quot;, 
&quot;9&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EDUCATION</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__EMPLOYMENT__c</fullName>
        <formula>Case( eCASS02t1__X11_Employement_Status__c, 
&quot;1. In paid employment&quot;,&quot;1&quot;,
&quot;2. Unemployed&quot;,&quot;2&quot;, 
&quot;3. Fas/training course&quot;,&quot;3&quot;, 
&quot;4. Student&quot;,&quot;4&quot;,
&quot;5. Housewife/husband&quot;,&quot;5&quot;, 
&quot;6. Retired/unable to work&quot;,&quot;6&quot;,
&quot;8. Other (specify)&quot;,&quot;8&quot;,
&quot;9&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMPLOYMENT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Education_Level__c</fullName>
        <label>Education Level</label>
        <picklist>
            <picklistValues>
                <fullName>1.	None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.	Primary School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.	Intermediate/Junior Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.	Leaving Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.	Technical/Vocational Training - Level 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.	Completed Apprenticeship/Higher Certificate - Level 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.	Certificate/Diploma - Level 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.	Honours Degree - Level 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.	Masters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.	Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__EmployCode__c</fullName>
        <formula>Case( eCASS02t1__X11_Employement_Status__c,
&quot;1. In paid employment&quot;,&quot;1&quot;,
&quot;2. Unemployed&quot;,&quot;2&quot;,
&quot;3 Fas/training course&quot;,&quot;3&quot;,
&quot;4. Student&quot;,&quot;4&quot;,
&quot;5. Housewife/husband&quot;,&quot;5&quot;,
&quot;6. Retired/unable to work&quot;,&quot;6&quot;,
&quot;8. Other (specify)&quot;,&quot;8&quot;,
&quot;9&quot;)</formula>
        <label>EmployCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Ethnic__c</fullName>
        <formula>Case(eCASS02t1__X10b_Ethnic_Background__c, 
&quot;1. White Irish&quot;, &quot;1&quot;,
&quot;2. White Irish Traveller&quot;,&quot;2&quot;, 
&quot;3. Any other white background&quot;,&quot;3&quot;,
&quot;4. Black African background&quot;,&quot;4&quot;,
&quot;5. Any other black background&quot;,&quot;5&quot;,
&quot;6. Chinese background&quot;,&quot;6&quot;,
&quot;7. Any other Asian background&quot;,&quot;7&quot;, 
&quot;8. Other&quot;,&quot;8&quot;,
&quot;9&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ethnic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Full_name__c</fullName>
        <formula>FirstName &amp; &quot; &quot; &amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__GP_Phone__c</fullName>
        <formula>eCASS02t1__GP__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GP Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__GP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GP</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (GP)</relationshipLabel>
        <relationshipName>ContactsGP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__GP_name_from_other_agency__c</fullName>
        <label>GP name from other agency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Gender_Code__c</fullName>
        <formula>Case( eCASS02t1__X4_Gender__c,
&quot;Male&quot;, &quot;1&quot;, 
&quot;Female&quot;, &quot;2&quot;,
&quot;9&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__HRB_Client_ID__c</fullName>
        <description>This is the Client ID without spaces or dashes</description>
        <formula>SUBSTITUTE(SUBSTITUTE( eCASS02t1__Client_ID__c , &quot;-&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;)</formula>
        <inlineHelpText>Client ID for HRB (your client ID without the spaces or dashes)</inlineHelpText>
        <label>HRB Client ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__HSE_area__c</fullName>
        <label>HSE area</label>
        <picklist>
            <picklistValues>
                <fullName>03 HSE Southern Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 HSE North Western Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05 HSE Midland Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06 HSE Western Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07 HSE Mid Western Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08 HSE North Eastern Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09 HSE South Eastern Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 HSE East Coast Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 HSE South Western Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13 HSE Northern Area</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Initials__c</fullName>
        <formula>LEFT (FirstName,1) &amp; LEFT (LastName, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initials</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Is_NOK_aware_of_issue__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the Next of Kin aware of drug use or contact with this service?</inlineHelpText>
        <label>Is NOK aware of issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Key_Worker_Phone__c</fullName>
        <formula>eCASS02t1__Key_Worker__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key Worker Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Key_Worker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Worker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Key Worker)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__LHO__c</fullName>
        <formula>eCASS02t1__Area_of_Residence_and_Reg_Code__r.eCASS02t1__LHO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LHO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__LIVING__c</fullName>
        <formula>Case(  eCASS02t1__X7a_Living_with_whom__c ,

&quot;1. Alone&quot;, &quot;1&quot;,
&quot;2. Parents/family&quot;, &quot;2&quot;,
&quot;3. Friends&quot;, &quot;3&quot;,
&quot;4. Partner (alone)&quot;, &quot;4&quot;,
&quot;5. Partner &amp; Child(ren)&quot;, &quot;5&quot;,
&quot;6. Alone with child(ren)&quot;, &quot;6&quot;,
&quot;7. Other&quot;, &quot;7&quot;,
&quot;8. Foster Care&quot;, &quot;8&quot;,
&quot;9&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LIVING</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__LIVWHERE__c</fullName>
        <formula>Case(  eCASS02t1__X7b_Livin_Where__c ,
&quot;1. Stable Accommodation&quot; , &quot;1&quot;,
&quot;2. Institution(prison/residential care/halfway house)&quot; , &quot;2&quot;,
&quot;3. Homeless&quot; , &quot;3&quot;,
&quot;4. Other unstable accommodation&quot; , &quot;4&quot;,
&quot;9&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LIVWHERE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Member_of_staff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Member of staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__NOK_from_other_agency__c</fullName>
        <label>NOK from other agency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__NUMBER__c</fullName>
        <formula>$Setup.eCASS02t1__eCASS_settings__c.eCASS02t1__Organisation_Name__c &amp; eCASS02t1__HRB_Client_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NUMBER</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Nationality__c</fullName>
        <formula>CASE(   eCASS02t1__X10a_Nationality__c  , 
&quot;1. Irish&quot;, &quot;1&quot;,
&quot;2. Other&quot;,&quot;2&quot;,
&quot;3. Irish traveller&quot;,&quot;3&quot;,
&quot;9&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nationality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Next_of_Kin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next of Kin</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Next of Kin)</relationshipLabel>
        <relationshipName>ContactsNOK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Next_of_Kin_mobile_phone__c</fullName>
        <formula>eCASS02t1__Next_of_Kin__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next of Kin mobile phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Number_of_completed_Treatments__c</fullName>
        <label>Number of completed Treatments</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__OTHEMPLOY__c</fullName>
        <formula>eCASS02t1__X11_Employement_Status_other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OTHEMPLOY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__PPS__c</fullName>
        <label>PPS</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Presenting_Issues__c</fullName>
        <inlineHelpText>What this person says is their issue</inlineHelpText>
        <label>Presenting Issues</label>
        <picklist>
            <picklistValues>
                <fullName>Drug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcohol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drug and Alcohol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concerned Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Person</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Probation_Officer_Phone__c</fullName>
        <formula>eCASS02t1__Probation_Officer__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Probation Officer Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Probation_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Probation Officer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Probation Officer)</relationshipLabel>
        <relationshipName>Contacts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Purpose_of_Contact_Drug_Alcohol_Related__c</fullName>
        <label>Purpose of Contact: Drug/Alcohol Related</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Record_Valid__c</fullName>
        <formula>if (isnull( Birthdate ),&quot;No birth date&quot;, 
if(eCASS02t1__Age__c &lt; 13 || eCASS02t1__Age__c &gt; 85, &quot;Age invalid&quot;,  
if(ispickval(eCASS02t1__X4_Gender__c,&quot;&quot;),&quot;No gender&quot;,
if(ispickval(eCASS02t1__X7a_Living_with_whom__c ,&quot;&quot;) ,&quot;7a invalid&quot;,
if(ispickval(eCASS02t1__X7b_Livin_Where__c ,&quot;&quot;) , &quot;7b invalid&quot;,
if(isblank(eCASS02t1__Area_of_Residence_and_Reg_Code__c),&quot;Area of res invalid&quot;,
if(ispickval(eCASS02t1__X10a_Nationality__c,&quot;&quot; ),&quot;10a invalid&quot;, 
if(ispickval(eCASS02t1__X10b_Ethnic_Background__c,&quot;&quot; ),&quot;10b invalid&quot;,
if(ispickval(eCASS02t1__X11_Employement_Status__c,&quot;&quot; ),&quot;11 invalid&quot;, 
if(AND(TEXT(eCASS02t1__X11_Employement_Status__c) &lt;&gt; &quot;8. Other (specify)&quot;, NOT(ISBLANK(eCASS02t1__X11_Employement_Status_other__c))),&quot;11 Employment status other, only required when Q11 = 8. Other (specify)&quot;,
if(eCASS02t1__X12a_Age_left_primary_school__c &lt;= 0,&quot;12a invalid&quot;, 
if(ispickval(eCASS02t1__X12b_Education_highest_level__c,&quot;&quot; ),&quot;12b invalid&quot;,
&quot;HRB OK&quot;))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Valid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Referred_By_Note__c</fullName>
        <label>Referred By Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Referred_By_Other_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred By Other Service</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Referred_By__c</fullName>
        <label>Referred By</label>
        <picklist>
            <picklistValues>
                <fullName>Self</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__RegCode__c</fullName>
        <formula>eCASS02t1__Area_of_Residence_and_Reg_Code__r.eCASS02t1__RegCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RegCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Social_worker_Phone__c</fullName>
        <formula>eCASS02t1__Social_worker__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Social worker Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Social_worker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Social worker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Social worker)</relationshipLabel>
        <relationshipName>Contacts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__Staff_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The staff person who was first contact with this client</inlineHelpText>
        <label>Staff Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__TFA__c</fullName>
        <formula>eCASS02t1__Area_of_Residence_and_Reg_Code__r.eCASS02t1__TFA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TFA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__X10a_Nationality_Other__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>10a. Nationality Other</label>
        <referenceTo>eCASS02t1__Nations__c</referenceTo>
        <relationshipLabel>Contacts (10a. Nationality Other)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__X10a_Nationality__c</fullName>
        <description>1. Irish     3. Irish traveller   2. Other   9. Not known</description>
        <inlineHelpText>1. Irish     3. Irish traveller   2. Other   9. Not known</inlineHelpText>
        <label>10a. Nationality</label>
        <picklist>
            <picklistValues>
                <fullName>1. Irish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Irish traveller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Not known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__X10b_Ethnic_Background__c</fullName>
        <label>10b. Ethnic Background</label>
        <picklist>
            <picklistValues>
                <fullName>1. White Irish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. White Irish Traveller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Any other white background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Black African background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Any other black background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Chinese background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Any other Asian background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Do not wish to answer this question</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__X11_Employement_Status__c</fullName>
        <label>11. Employement Status</label>
        <picklist>
            <picklistValues>
                <fullName>1. In paid employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Unemployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Fas/training course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Housewife/husband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Retired/unable to work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Other (specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Not Known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__X11_Employement_Status_other__c</fullName>
        <inlineHelpText>If 8. Other above please specify</inlineHelpText>
        <label>11. Employement Status other</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__X12a_Age_left_primary_school__c</fullName>
        <description>Year left school (not third level)
01. Never went to school
88. Still at school
99. Not known</description>
        <inlineHelpText>Year left school (not third level)
01. Never went to school
88. Still at school
99. Not known</inlineHelpText>
        <label>12a. Age left primary/secondary school</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__X12b_Education_highest_level__c</fullName>
        <label>12b. Education highest level</label>
        <picklist>
            <picklistValues>
                <fullName>0. Primary Level incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Primary level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Junior cert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Leaving Cert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Third Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Never went to school</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Special needs education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Still in education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Not known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__X4_Gender__c</fullName>
        <inlineHelpText>1. Male
2. Female</inlineHelpText>
        <label>4. Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female child</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__X7a_Living_with_whom__c</fullName>
        <label>7a. Living with whom?</label>
        <picklist>
            <picklistValues>
                <fullName>1. Alone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Parents/family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Friends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Partner (alone)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Partner &amp; Child(ren)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Alone with child(ren)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Foster Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Not known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__X7b_Livin_Where__c</fullName>
        <label>7b. Living Where?</label>
        <picklist>
            <picklistValues>
                <fullName>1. Stable Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Institution(prison/residential care/halfway house)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Homeless</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Other unstable accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Not Known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>